Added More Features

--- a/src/web/index.html
+++ b/src/web/index.html
@@ -14,115 +14,125 @@
 
 <body>
 <div class="container">
-<h2>Welcome to Sanjaal Corps</h2>
+    <h2>Welcome to Sanjaal Corps</h2>
 
-<div class="row">
-
-    <div class="alert info">
-        <span class="closebtn">&times;</span>
-        This is the new version of Sanjaal Corps Homepage. Welcome !!
-    </div>
-
-</div>
-
-<div class="row">
-
-    <div class="col-md-6">
-        <span class="label green">About Us</span>
-        <span class="label blue">Contact Us</span>
-        <span class="label orange">Our Network</span>
-        <span class="label red">Register</span>
-        <span class="label green">Login</span>
-    </div>
-
-</div>
-
-<p/><p/>
-
-<div class="row">
-    <div class="col-md-2">
-        <div class="card">
-            <img src="images/3redbooks-300px.png" alt="Avatar" style="width:80%">
-            <div class="container">
-                <h4><b>Nepali Poems</b></h4>
-                <p>नेपाली कविता, गजल, गीत  आदि </p>
-            </div>
-        </div>
-    </div>
-
-    <div class="col-md-2">
-        <div class="card">
-            <img src="images/3redbooks-300px.png" alt="Avatar" style="width:80%">
-            <div class="container">
-                <h4><b>Nepali Stories</b></h4>
-                <p>Interior Designer</p>
-            </div>
-        </div>
-    </div>
-
-    <div class="col-md-2">
-        <div class="card">
-            <img src="images/3redbooks-300px.png" alt="Avatar" style="width:80%">
-            <div class="container">
-                <h4><b>Nepali Videos</b></h4>
-                <p>Interior Designer</p>
-            </div>
-        </div>
-    </div>
-
-    <div class="col-md-2">
-        <div class="card">
-            <img src="images/3redbooks-300px.png" alt="Avatar" style="width:80%">
-            <div class="container">
-                <h4><b>Nepali Stories</b></h4>
-                <p>Interior Designer</p>
-            </div>
-        </div>
-    </div>
-
-    <div class="col-md-2">
-        <div class="card">
-            <img src="images/3redbooks-300px.png" alt="Avatar" style="width:80%">
-            <div class="container">
-                <h4><b>Nepali Stories</b></h4>
-                <p>Interior Designer</p>
-            </div>
-        </div>
-    </div>
-
-    <div class="col-md-2">
-        <div class="card">
-            <img src="images/3redbooks-300px.png" alt="Avatar" style="width:80%">
-            <div class="container">
-                <h4><b>Nepali Stories</b></h4>
-                <p>Interior Designer</p>
-            </div>
-        </div>
-    </div>
-
-</div>
-
-    <p/>
-    <p/>
-    <p/>
     <div class="row">
-    <div class="chip">
-        <img src="images/img_avatar.png" alt="Person" width="96" height="96">
-        John Doe
+
+        <div class="alert info">
+            <span class="closebtn">&times;</span>
+            This is the new version of Sanjaal Corps Homepage. Welcome !!
+        </div>
+
     </div>
-    <div class="chip">
-        <img src="images/img_avatar.png" alt="Person" width="96" height="96">
-        John Doe
+
+    <div class="row">
+
+        <div class="col-md-12">
+            <span><a href="about_us.html">About Us</a></span>
+            <span><a href="contact_us.html">Contact Us</a></span>
+            <span><a href="our_network.html">Our Network</a></span>
+            <span><a href="register.html">Register</a></span>
+            <span><a href="login.html">Login</a></span>
+        </div>
+
+
     </div>
-    <div class="chip">
-        <img src="images/img_avatar.png" alt="Person" width="96" height="96">
-        John Doe
+
+    <p/>
+    <p/>
+
+    <div class="row"> <!-- First Row-->
+        <div class="col-md-2">
+            <div class="card">
+                <img src="images/3redbooks-300px.png" alt="Avatar" style="width:80%">
+                <div class="container">
+                    <h4><b>Nepali Poems</b></h4>
+                    <p>नेपाली कविता, गजल, गीत</p>
+                    <p>(On iNepal.ORG)</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-2">
+            <div class="card">
+                <img src="images/3redbooks-300px.png" alt="Avatar" style="width:80%">
+                <div class="container">
+                    <h4><b>Nepali Stories</b></h4>
+                    <p>नेपाली कथा, लघुकथा</p>
+                    <p>(On iNepal.ORG)</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-2">
+            <div class="card">
+                <img src="images/3redbooks-300px.png" alt="Avatar" style="width:80%">
+                <div class="container">
+                    <h4><b>Nepali Articles</b></h4>
+                    <p>नेपाली लेख, रचना</p>
+                    <p>(On iNepal.ORG)</p>
+                </div>
+            </div>
+        </div>
+
     </div>
+
+    <div class="row"> <!--Second Row-->
+
+        <div class="col-md-2">
+            <div class="card">
+                <img src="images/3redbooks-300px.png" alt="Avatar" style="width:80%">
+                <div class="container">
+                    <h4><b>Nepali Videos</b></h4>
+                    <p>Interior Designer</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-2">
+            <div class="card">
+                <img src="images/3redbooks-300px.png" alt="Avatar" style="width:80%">
+                <div class="container">
+                    <h4><b>Nepali Stories</b></h4>
+                    <p>Interior Designer</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-2">
+            <div class="card">
+                <img src="images/3redbooks-300px.png" alt="Avatar" style="width:80%">
+                <div class="container">
+                    <h4><b>Nepali Stories</b></h4>
+                    <p>Interior Designer</p>
+                </div>
+            </div>
+        </div>
     </div>
 
 </div>
 
+<p/>
+<p/>
+<p/>
+<div class="row">
+    <div class="col-md-1"></div>
+    <div class="col-md-2">
+        <div class="chip">
+            <img src="images/img_avatar.png" alt="Person" width="96" height="96">
+            John Doe
+        </div>
+    </div>
+</div>
 
+<div class="row"> <!-- Footer-->
+    <div class="col-md-1"></div>
+    <div class="col-md-10 alert warning">
+    Sanjaal Corps is a company registered in Chitwan, Nepal and is operated globally and virtually since 2007. Our primary focus is to collect, preserve, build and promote Nepali Contents over the internet and mobile media. Some of these contents include Poems, Stories, Articles, Songs, Lyrics, Android Apps. We also provide consultations on Web Hosting, develop varieties of Android Apps sparingly and work on freelance projects occasionally.
+    </div>
+</div>
+
+</div>
 
 
 <script>
@@ -145,6 +155,7 @@ for (i = 0; i < close.length; i++) {
         setTimeout(function(){ div.style.display = "none"; }, 600);
     }
 }
+
 </script>
 
 </body>
