Added Icons, Fixed Layout

--- a/src/web/index.html
+++ b/src/web/index.html
@@ -20,7 +20,7 @@
 
         <div class="alert info">
             <span class="closebtn">&times;</span>
-            This is the new version of Sanjaal Corps Homepage. Welcome !!
+            This is the new version of Sanjaal Corps homepage. Welcome !! If you see some issue, report them to contact@sanjaal.com
         </div>
 
     </div>
@@ -33,6 +33,10 @@
             <span><a href="our_network.html">Our Network</a></span>
             <span><a href="register.html">Register</a></span>
             <span><a href="login.html">Login</a></span>
+            <span><a href="social.html">Social Media</a></span>
+            <span><a href="volunteer.html">Volunteer</a></span>
+            <span><a href="downloads.html">Downloads</a></span>
+
         </div>
 
 
@@ -41,81 +45,152 @@
     <p/>
     <p/>
 
-    <div class="row"> <!-- First Row-->
-        <div class="col-md-2">
-            <div class="card">
-                <img src="images/3redbooks-300px.png" alt="Avatar" style="width:80%">
-                <div class="container">
-                    <h4><b>Nepali Poems</b></h4>
-                    <p>नेपाली कविता, गजल, गीत</p>
-                    <p>(On iNepal.ORG)</p>
-                </div>
-            </div>
-        </div>
+    <div class="container">
 
-        <div class="col-md-2">
-            <div class="card">
-                <img src="images/3redbooks-300px.png" alt="Avatar" style="width:80%">
-                <div class="container">
-                    <h4><b>Nepali Stories</b></h4>
-                    <p>नेपाली कथा, लघुकथा</p>
-                    <p>(On iNepal.ORG)</p>
-                </div>
-            </div>
-        </div>
+        <div class="row"> <!--External Row-->
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="row"> <!-- First Row of Features-->
+                        <div class="col-md-4">
+                            <div class="card" onclick="location.href='http://www.inepal.org/nepalipoems/';">
+                                <img src="images/img_red_books.png" style="width:80%">
+                                <div class="container">
+                                    <h4><b>Nepali Poems</b></h4>
+                                    <p>नेपाली कविता, गजल, गीत</p>
+                                    <p>(On iNepal.ORG)</p>
+                                </div>
+                            </div>
+                        </div>
 
-        <div class="col-md-2">
-            <div class="card">
-                <img src="images/3redbooks-300px.png" alt="Avatar" style="width:80%">
-                <div class="container">
-                    <h4><b>Nepali Articles</b></h4>
-                    <p>नेपाली लेख, रचना</p>
-                    <p>(On iNepal.ORG)</p>
+                        <div class="col-md-4">
+                            <div class="card">
+                                <img src="images/img_fox_head.png" style="width:80%">
+                                <div class="container">
+                                    <h4><b>Nepali Stories</b></h4>
+                                    <p>नेपाली कथा, लघुकथा</p>
+                                    <p>(On iNepal.ORG)</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-4">
+                            <div class="card">
+                                <img src="images/img_red_books.png" style="width:80%">
+                                <div class="container">
+                                    <h4><b>Nepali Articles</b></h4>
+                                    <p>नेपाली लेख, रचना</p>
+                                    <p>(On iNepal.ORG)</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="col-md-6">
+
+                    <iframe src="//www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2Fsanjaalcorps&amp;width&amp;height=290&amp;colorscheme=light&amp;show_faces=true&amp;header=true&amp;stream=false&amp;show_border=true&amp;appId=160208350702330"
+                            scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:230px;"
+                            allowTransparency="true"></iframe>
+
                 </div>
             </div>
-        </div>
+
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="row"> <!--Second Row of features-->
+
+                        <div class="col-md-4">
+                            <div class="card">
+                                <img src="images/img_video.png" style="width:80%">
+                                <div class="container">
+                                    <h4><b>Nepali Videos</b></h4>
+                                    <p>(On Inepal.ORG)</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-4">
+                            <div class="card">
+                                <img src="images/img_ganthan.png" style="width:80%">
+                                <div class="container">
+                                    <h4><b>Nepali Ganthan</b></h4>
+                                    <p>(On Inepal.ORG)</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-4">
+                            <div class="card">
+                                <img src="images/img_lyrics.png" style="width:80%">
+                                <div class="container">
+                                    <h4><b>Nepali Lyrics</b></h4>
+                                    <p>(On Inepal.ORG)</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+
+                </div>
+
+            </div>
+
+            <div class="row"> <!--Empty Row-->
+            </div>
+
+
+            <div class="row"> <!--Third Row of features-->
+                <div class="col-md-6">
+                    <div class="row">
+
+                        <div class="col-md-4">
+                            <div class="card">
+                                <img src="images/img_android_app.png" style="width:80%">
+                                <div class="container">
+                                    <h4><b>Nepali Apps</b></h4>
+                                    <p>For Android Platform</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-4">
+                            <div class="card">
+                                <img src="images/img_data.png" style="width:80%">
+                                <div class="container">
+                                    <h4><b>Nepali Data</b></h4>
+                                    <p>(On Inepal.ORG)</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-4">
+                            <div class="card">
+                                <img src="images/img_forex.png" style="width:80%">
+                                <div class="container">
+                                    <h4><b>Nepali Forex</b></h4>
+                                    <p>Currency Xchange Rates</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+
+                </div>
+
+            </div>
+
+        </div> <!--External Row-->
 
     </div>
-
-    <div class="row"> <!--Second Row-->
-
-        <div class="col-md-2">
-            <div class="card">
-                <img src="images/3redbooks-300px.png" alt="Avatar" style="width:80%">
-                <div class="container">
-                    <h4><b>Nepali Videos</b></h4>
-                    <p>Interior Designer</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-md-2">
-            <div class="card">
-                <img src="images/3redbooks-300px.png" alt="Avatar" style="width:80%">
-                <div class="container">
-                    <h4><b>Nepali Stories</b></h4>
-                    <p>Interior Designer</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-md-2">
-            <div class="card">
-                <img src="images/3redbooks-300px.png" alt="Avatar" style="width:80%">
-                <div class="container">
-                    <h4><b>Nepali Stories</b></h4>
-                    <p>Interior Designer</p>
-                </div>
-            </div>
-        </div>
-    </div>
-
 </div>
 
 <p/>
 <p/>
 <p/>
-<div class="row">
+<!--<div class="row">
     <div class="col-md-1"></div>
     <div class="col-md-2">
         <div class="chip">
@@ -123,12 +198,17 @@
             John Doe
         </div>
     </div>
-</div>
+</div>-->
+
 
 <div class="row"> <!-- Footer-->
     <div class="col-md-1"></div>
     <div class="col-md-10 alert warning">
-    Sanjaal Corps is a company registered in Chitwan, Nepal and is operated globally and virtually since 2007. Our primary focus is to collect, preserve, build and promote Nepali Contents over the internet and mobile media. Some of these contents include Poems, Stories, Articles, Songs, Lyrics, Android Apps. We also provide consultations on Web Hosting, develop varieties of Android Apps sparingly and work on freelance projects occasionally.
+        Sanjaal Corps is a company registered in Chitwan, Nepal and is operated globally and virtually since 2007. Our
+        primary focus is to collect, preserve, build and promote Nepali Contents over the internet and mobile media.
+        Some of these contents include Poems, Stories, Articles, Songs, Lyrics, Android Apps. We also provide
+        consultations on Web Hosting, develop varieties of Android Apps sparingly and work on freelance projects
+        occasionally.
     </div>
 </div>
 
