added youtube link

--- a/src/web/index.html
+++ b/src/web/index.html
@@ -20,7 +20,8 @@
 
         <div class="alert info">
             <span class="closebtn">&times;</span>
-            This is the new version of Sanjaal Corps homepage. Welcome !! If you see some issue, report them to contact@sanjaal.com
+            This is the new version of Sanjaal Corps homepage. Welcome !! If you see some issue, report them to
+            contact@sanjaal.com
         </div>
 
     </div>
@@ -87,13 +88,24 @@
 
                 </div>
 
-                <div class="col-md-6">
-
-                    <iframe src="//www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2Fsanjaalcorps&amp;width&amp;height=290&amp;colorscheme=light&amp;show_faces=true&amp;header=true&amp;stream=false&amp;show_border=true&amp;appId=160208350702330"
-                            scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:230px;"
-                            allowTransparency="true"></iframe>
-
+                <div class="col-md-2">
+                    <div class="card" onclick="location.href='https://www.youtube.com/user/sanjaalcorps/videos'"/>
+                        <img src="images/img_youtube.png" style="width:80%">
+                        <div class="container">
+                            <h4><b>Our Videos</b></h4>
+                            <p>On YouTube</p>
+                            <p>&NonBreakingSpace;</p>
+                        </div>
+                    </div>
                 </div>
+
+                <div class="col-md-4">
+                        <iframe src="//www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2Fsanjaalcorps&amp;width&amp;height=290&amp;colorscheme=light&amp;show_faces=true&amp;header=true&amp;stream=false&amp;show_border=true&amp;appId=160208350702330"
+                                scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:230px;"
+                                allowTransparency="true"></iframe>
+                </div>
+
+
             </div>
 
             <div class="row">
@@ -235,6 +247,9 @@ for (i = 0; i < close.length; i++) {
         setTimeout(function(){ div.style.display = "none"; }, 600);
     }
 }
+
+
+
 
 </script>
 
